Faker st all corrected+straightened
Did stuff and such. Very interesting.

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -218,7 +218,7 @@ As you climb up the two rows of stairs up to the office, you notice agitated tal
 &lt;/div&gt;
 
 [[Go Home-&gt;Interlude]]
-</tw-passagedata><tw-passagedata pid="4" name="Blocksford Street" tags="" position="2915,1521.3333333333335" size="100,100">You are on the Blocksfordstreet
+</tw-passagedata><tw-passagedata pid="4" name="Blocksford Street" tags="" position="2915,1521.3333333333335" size="100,100">You are on the Blocksford Street
 [[Map]]
 &lt;&lt;if $photographer isnot true&gt;&gt;
 [[Photography Shop]]
@@ -235,7 +235,7 @@ As you climb up the two rows of stairs up to the office, you notice agitated tal
 [[Church]]
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;if $inventor isnot true&gt;&gt;
-[[Wierd Workshop]]
+[[Weird Workshop]]
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;if $weaponsdealer isnot true&gt;&gt;
 [[Weapons Shop]]
@@ -296,28 +296,29 @@ As you climb up the two rows of stairs up to the office, you notice agitated tal
 	&lt;&lt;/linkappend&gt;&gt;
 &lt;&lt;/linkappend&gt;&gt;
                        
-</tw-passagedata><tw-passagedata pid="10" name="Church" tags="" position="5163,1073" size="100,100">As you go through the old wooden door of the Fakerstreet Church, the dark wood is been held together by black steel bars. You enter a very long hallway supported by by many pillars arranged  the left and right side of the Church, the walls are made out of huge sandstone quaders, it has a yellow tint. Your eyes can barely make out the wooden altar at the end of the hallway as they are blinded by the white light castet from the majestic church window at the very end. As you Walk into the Church. A black dressed figure with a unnatural straight posture approaches you quickly, his feet move so controlled as if he his body is floating over the ground.  
+</tw-passagedata><tw-passagedata pid="10" name="Church" tags="" position="5163,1073" size="100,100">As you go through the old wooden door of the Fakerstreet Church, the dark wood being held together by black steel bars, you enter a very long hallway, lined with supporting pillars to the left and right. The walls consisted of huge sandstone blocks; decorated with ornaments painted with a yellow tint. Your eyes can barely make out the wooden altar at the end of the hallway, as they are blinded by the white light casted from the majestic church window at the very end of the church ship. As you Walk through the Church, a figure dressed in black with a unnaturally stiff posture approaches you quickly, his feet moving in such a controlled, mechanical way make it seem as if his body is floating over the ground.  
 
-“Come closer my child. Welcome to the Fakerstreet church” The priest makes the sign of the cross as he looks down upon you before he rests his hands touching each other in front of his stomach “I see you have a conflicted soul, how can I help you?”
+//“Come closer my child. Welcome to the Fakerstreet church.”// The priest makes the sign of the cross as he looks down upon you before he rests his hands touching each other in front of his stomach //“I see you have a conflicted soul, how can I help you?”//
 
 
-[[Father, I come to you with a great sadness. My masters mother is very close to death. and we need the consultant of god. please come by to 54 Bernerstreet as soon as possible. At Monday 10 o&#39;clock perhaps?-&gt;Charcter Priest]]
-[[Apology father,  but I need to go!-&gt;Faker Street]] </tw-passagedata><tw-passagedata pid="11" name="Wierd Workshop" tags="" position="5019,547" size="100,100">You enter the Shop, hanging on the wall you see a white flag with an black eagle. It is the flag of Prussia. the workshop is filled with mysterious objects and apparatuses.
+[[Father, I come to you with a great sadness. My masters mother is very close to death. and we need the consultant of god. please come by to 54 Bernerstreet as soon as possible. At Monday 10 o&#39;clock perhaps?-&gt;Character Priest]]
+[[Apology father,  but I need to go!-&gt;Faker Street]] </tw-passagedata><tw-passagedata pid="11" name="Weird Workshop" tags="" position="5015.666666666667,543.6666666666666" size="100,100">You enter the Shop, and the first thing to catch your eye is some kind of flag hanging on the wall. The flag bears a white ground with a black eagle. It is the flag of Prussia. The workshop is filled with mysterious objects and apparatuses.
 
-German Accent: Welcome in my modest shop! Everything you see iz for zale! I also take special requests. 
+A blonde man with a german accent, which you didn&#39;t even realize being here at first, starts talking to you from the side: //&quot;Welcome in my modest schopp! Everything you see iz for zale! I also take special rekwests.&quot;// 
 
 [[Go Back to the Street -&gt;Faker Street]] 
 [[Do you sell any weapons?]]
 [[Why did you come to London?]]
 
 
-</tw-passagedata><tw-passagedata pid="12" name="Weapons Shop" tags="" position="4346,605" size="100,100">You enter the Shop, everything is well organized you see a number of rifles and pistols on display in the corner you can also see a few blades and daggers, everything seems to be on sale. you walk up to the counter and ring the bell an elderly man with a beard approaches out of the workshop, his eyes look at you from above his reading glasses while he smiles.
+</tw-passagedata><tw-passagedata pid="12" name="Weapons Shop" tags="" position="4346,605" size="100,100">You enter the Shop, everything is well organized. You see a number of rifles and pistols on display and in the corner you can also see a few blades and daggers, everything seems to be on sale. You walk up to the counter and ring the bell. An elderly man with a bushy beard shows up coming out of the workshop, he looks at you from above his reading glasses while he smiles.
 
-Welcome, welcome… the name is George Attling, call me george. how can I help you sir? are you looking for weapon for self defence? our rifles are in top condition. or maybe a wedding gift? we have some nice gold plated dueling pistols with costum ornamentation.
+//&quot;Welcome, welcome… the name is George Attling, call me George. How can I help you sir? Are you looking for a weapon for self defence? Our rifles are in top condition. Or maybe a wedding gift? We have some nice gold plated dueling pistols with custom ornamentation.&quot;//
 
 [[I need to go now-&gt;Faker Street]]
 [[Yes I do need a wedding gift for my master, what can you recommend me?-&gt;Gift]]
-[[Indeed sir, I am looking for a weapon for self defence.-&gt;Self Defece]]</tw-passagedata><tw-passagedata pid="13" name="Charcter Priest" tags="" position="5050,1213" size="100,100">“scans you for a second with his judgmental eyes before he says with a calm smile “Of course, I will be there Monday 10 o&#39;clock.”
+[[Indeed sir, I am looking for a weapon for self defence.-&gt;Self Defence]]</tw-passagedata><tw-passagedata pid="13" name="Character Priest" tags="" position="5050,1213" size="100,100">He scans you for a second with a stern, judging look in his eyes before he replies, calmly smiling: //&quot;Of course, I will be there Monday 10 o&#39;clock.&quot;//
+
 &lt;&lt;set $priest to true&gt;&gt;
 
 [[Thank you father-&gt;Faker Street]] </tw-passagedata><tw-passagedata pid="14" name="10.00" tags="" position="3496,2469" size="100,100">&lt;&lt;set _randompassage to either(
@@ -952,24 +953,28 @@ After a while, a small skinny man in ragged brown clothing enters the room from 
 &lt;&lt;set $chalcographer to true&gt;&gt;
 
 [[Return to the Street -&gt;Blocksford Street]] 
-</tw-passagedata><tw-passagedata pid="45" name="Do you sell any weapons?" tags="" position="5137,718" size="100,100">yes yes. I have the finest weapons that money can buy huehuehue… they are far better than from this moron Attling!
+</tw-passagedata><tw-passagedata pid="45" name="Do you sell any weapons?" tags="" position="5142,714.6666666666666" size="100,100">//&quot;Yes, yes. I have the finezt weapenz that money can buy, huehuehue… They are of far better quality than everysing from this moron Attling!&quot;//
 
-I would like to order some of your finest pieces to 54 Berners Street, please deliver them on Monay
 
-&lt;&lt;linkappend &quot;Can you tell me more about what these weapons actually do?&quot;&gt;&gt; 
-Dont you want to know what they do?
+&lt;&lt;linkappend &quot;Can you propose me an efficient, but still affordable model?&quot;&gt;&gt; 
+//&quot;Well how about this one?&quot;// 
+He shows you a pretty standard barrel gun. You don&#39;t know enough about weapons to really judge the iron correctly, but it&#39;ll do the job; you guess.
 
-&lt;&lt;linkappend &quot;No thank you i have to go now.. just bring them to 54 Berners Street&quot;&gt;&gt;
-Well I&#39;ll bring some of my finest Models to 54 Berners Street. For only 15£ in pre-comission fee. 
+&lt;&lt;linkappend &quot;Okay, I&#39;m in. Just bring them to 54 Berners Street on monday, would 10 o&#39;clock work out for you?&quot;&gt;&gt;
+//&quot;Sure thing. Well, then I&#39;ll bring this specififc model to 54 Berners Street. For only 15£ in pre-comission fee, if I may ask.&quot;// 
+
 &lt;&lt;if $money lt 15&gt;&gt;
 [[I can&#39;t afford that.-&gt;Faker Street]]
 &lt;&lt;else&gt;&gt;
 [[Accep Offer-&gt;Deal Inventor]]
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/linkappend&gt;&gt;
-&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="46" name="Why did you come to London?" tags="" position="5282,577" size="100,100">I was exiled from Berlin for my… controversial experiments. they claimed I caused the city fire. He points at a newspaper article that says (Geisteskranker Tüftler in Berlin verursacht  Stadtbrand) of course… this is not true…
+&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="46" name="Why did you come to London?" tags="" position="5282,580.3333333333334" size="100,100">The man blushes upon hearing this question, but starts explaining anyway.
+//&quot;I was exiled from Berlin for my… controverschial experimenz. They claimed I cauzd something like a, you know, a sity fire.&quot;//
+He points at a newspaper article that says (Geisteskranker Tüftler in Berlin verursacht Stadtbrand), and then adds: //&quot;Of course… this is not true…&quot;//
 
-[[Do you sell any weapons?]] </tw-passagedata><tw-passagedata pid="47" name="Deal Inventor" tags="" position="5287,783" size="100,100">Very well I&#39;ll be there at 9.00 o&#39;clock.
+[[Do you sell any weapons?]] </tw-passagedata><tw-passagedata pid="47" name="Deal Inventor" tags="" position="5287,783" size="100,100">//&quot;Very well, I&#39;ll be there between 9 and 10 o&#39;clock. See you then, young sir.&quot;//
+&quot;Thank you. Until then&quot;, you answer, and leave the shop.
 &lt;&lt;set $money -= 15&gt;&gt;
 &lt;&lt;set $inventor to true&gt;&gt;
 [[Faker Street]] </tw-passagedata><tw-passagedata pid="48" name="Speak to her" tags="" position="5057,2540" size="100,100">//Well, hello handsome - what gives us the pleasure to have such a fine gentlemen in our house? //
@@ -1474,20 +1479,31 @@ He walks away and disappears in the next alley.
 
 [[The Lady can’t afford that, i guess. Maybe i have to go to the Photographer.-&gt;Barter Chalcographer]]
 &lt;&lt;set $visitedChalcographer to true&gt;&gt;
-</tw-passagedata><tw-passagedata pid="90" name="Gift" tags="" position="4601,434" size="100,100">“very good, very good, lets see… “ The Merchant looks through his workshop and grabs an old looking dusty box ”this my friend, yes this is a set of dueling pistols they are almost one hundred years old, yes yes, almost as old as I am ha!. They are in mint condition of course and would make a great wedding gift?”
+</tw-passagedata><tw-passagedata pid="90" name="Gift" tags="" position="4602.666666666667,432.3333333333333" size="100,100">//“Very good, very good, lets see… “//
+The Merchant looks through his workshop and grabs an old looking dusty box. 
+”This my friend, yes, this is a set of dueling pistols that are almost one hundred years old, yes yes, almost as old as I am, ha! They are in mint condition of course; and wouldn&#39;t they make a great wedding gift?”
+He makes inviting gestures around the box with his hand, hovering it left and right while talking.
+//&quot;I&#39;ll sell you this selected set of revolvers for only 25£. Now, what do you say?&quot;//
 
-I have this selection set of revolvers for only 25£.
 &lt;&lt;if $money lt 25&gt;&gt;
 [[I can&#39;t afford that-&gt;Faker Street]] 
 &lt;&lt;else&gt;&gt;
 [[Thats great I take it, can you deliver the set to 54 Bernerstreet by Monday 9.00pm?-&gt;Deal Weaponsdealer]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="91" name="Self Defece" tags="" position="4818,533" size="100,100">“Very well sir, we I have just the Iron you need hehe” grabs a box from below the counter and puts it in front of you before opening it” this my friend is an import from the USA the united states of the americas, its a Colt Dragoon revolver sir, you can load 6 rounds at once at shoot the one after the other without reloading bang! bang! bang!. Only 7£.
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="91" name="Self Defence" tags="" position="4818,533" size="100,100">//“Very well sir, I have just the Iron you need, heeheehee.”// 
+He grabs a box from below the counter and puts it in front of you before opening it. You&#39;re no weapons expert, but you recognize some kind of colt being contained in the box.
+//”This, my young friend, is an import from the USA, the united states of the americas, as you may know, and its a colt &quot;Dragoon&quot; revolver, sir.&quot;// 
+With an almost loving touch he caresses the iron&#39;s barrel.
+//&quot;You can load 6 rounds at once and shoot the one after the other without reloading! Bang! Bang! Bang!. Only 7£. A must, isn&#39;t it?&quot;
+
  &lt;&lt;set $weaponsdealer_pricecheap to true&gt;&gt;
  &lt;&lt;if $money lt 7&gt;&gt;
 [[I can&#39;t afford that-&gt;Faker Street]] 
 &lt;&lt;else&gt;&gt;
 [[Sounds great I take 10 of them, can you deliver the revolvers to 54 Berners Street by Monday 9 o&#39;clock?-&gt;Deal Weaponsdealer]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="92" name="Deal Weaponsdealer" tags="" position="4570,648" size="100,100">Happy to do buisiness with you.
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="92" name="Deal Weaponsdealer" tags="" position="4570,648" size="100,100">He nods and smiles a bit.
+//&quot;Happy to do business with you.&quot;//
+
+
 &lt;&lt;if $weaponsdealer_pricecheap is true&gt;&gt;
 	&lt;&lt;set $money -= 7&gt;&gt;
 	&lt;&lt;set $weaponsdealer to true&gt;&gt;
