--- a/Berners Street .html
+++ b/Berners Street .html
@@ -1268,12 +1268,12 @@ Even though a few observant citizens immediately follow O&#39;Flannigan, he quic
 
 &lt;&lt;set $tumult += 9&gt;&gt;
 
-</tw-passagedata><tw-passagedata pid="74" name="Happening Detective" tags="" position="3636,2830" size="100,100">Suddenly the criminal O&#39;Flannigan falls on the ground. He swears a few more sentences as he gets up. But in the middle of his motion he stops and looks around like a lost child. 
-Herlock Sholmes appears behind a bush and slowly walks towards Shamous, while he still struggles to get up. 
-//You fell in to my trap! I actually didn&#39;t believe it would work out. How does it feel to be glued to the ground?// 
-//YOU! WHO ARE YOU??? I&#39;ve never seen you in this town!//
-//You could say that I am quite the opposite of you - a detective genius who is unpredicteable for others. It took quite the calculations to come up with a plan for catching someone like you.//
-Herlock reaches his hand behind his back and takes out handcuffs. O&#39;Flannigan sees the opportunity, takes out a round object from his jacket and throws it on the ground. A lound bang followed by a thick cloud of smoke that spreads on the street leads to people panicking on the street. For a few seconds you can&#39;t hear nothing. Then Suddenly you hear gunshots and groaning from the middle of the cloud. The smoke thins out and both Herlock and Shamous lie on the sidewalk. 
+</tw-passagedata><tw-passagedata pid="74" name="Happening Detective" tags="" position="3636,2830" size="100,100">Suddenly the criminal O&#39;Flannigan, that had made his way to 54 Berners Street by now, trips and falls to the ground. He swears and spews curses as he gets up. But in the middle of his motion he stops and looks around like a lost child. 
+Herlock Sholmes appears from behind a bush and slowly walks towards Shamous, while he still struggles to get up. 
+//&quot;You fell in to my trap! I actually didn&#39;t believe it would work out. How does it feel to be glued to the ground?&quot;// 
+//&quot;YOU! WHO ARE YOU??? I&#39;ve never seen you in this town!&quot;//
+//&quot;You could say that I am quite the opposite of you - a detective genius who is unpredicteable for others. It took quite the calculations to come up with a plan for catching someone like you.&quot;//
+Herlock reaches his hand behind his back and takes out handcuffs. O&#39;Flannigan sees the opportunity, takes out a round object from his jacket and throws it on the ground. A lound bang followed by a thick cloud of smoke that spreads on the street leads to people panicking on the street. For a few seconds you can&#39;t hear anything. Then Suddenly you hear gunshots and groaning from the middle of the cloud. The smoke thins out and both Herlock and Shamous lie on the sidewalk. 
 // CALL A DOCTOR!! // 
 Herlock groans in pain and holds his chest, which is covered in blood while Shamous still lies motionless on the ground.
 
