--- a/Berners Street .html
+++ b/Berners Street .html
@@ -725,7 +725,7 @@ Hook speaks up again. //“Don’t give me that flustered look, boy! It’ll be 
 Hook laughs wholeheartedly at my response. Then comes over to tap my shoulder.
 //“Give it a try at least, won’t you? We’ll meet up tomorrow morning, I’ll hand you everything you’ll need. And then, you just take the whole day to assemble as big of a crowd as you can down at Berners.”//
 A silenced sigh escapes you. But, after all you’ve been, at least more or less, persuaded to obey.
-&#39;&#39;fett&#39;&#39;Hook gives you a few other tasks for the present day; and leaves you with that; expecting you tomorrow morning.//
+Hook gives you a few other tasks for the present day; and leaves you with that; expecting you tomorrow morning.//
 
 [[Accept it -&gt;Continue]] 
 [[Try to talk Hook out of the idea-&gt;Talk Hook out of the idea, explaining how nonsensical this all is.]]
