--- a/Berners Street .html
+++ b/Berners Street .html
@@ -307,10 +307,24 @@ You find yourself on the Reek Street.
 &lt;&lt;if $$pharmacist isnot true&gt;&gt;
 [[Pharmacy]]&lt;br/&gt;
 &lt;&lt;/if&gt;&gt;
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="Interlude" tags="" position="3582,1750" size="100,100">&lt;&lt;set $phase_collection to false &gt;&gt;
+&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="7" name="Interlude" tags="" position="3582,1748.3333333333333" size="100,100">The sun slowly sinks towards the horizon, taking its golden light away with it step by step.
+People start rushing onto the streets to engage in their offtime activities, or to merely join the nightlife; and so you think about ending your current odyssey through the city streets.
+
+You decide that you&#39;ve organized enough people to arrive on monday morning. Also, the amount of money that Hook gave you is slowly thinning out; and maybe you want to take a few bucks home for yourself.
+
+You leave the main square between Reek, Bloxford and Faker street, and head into a side street to make your way home.
+
+Wondering if you did well; you fight through the crowd rushing into the streets, and soon enough; you see the building in which you live appear behind the rows on rows of houses.
+You wonder how all of this is going to turn out; and have some trouble finding sleep; may it be because of nervosity or sorrow but in the end, slumber takes over.
+
+And just a few hours later, the time had come: 
+The time to watch the great Berners Street Hoax pan out.
+
+[[Monday 8.00-&gt;8.00]]
+
+&lt;&lt;set $phase_collection to false &gt;&gt;
 &lt;&lt;set $phase_tumult to true&gt;&gt;
 &lt;&lt;set $tumult to 0&gt;&gt;
-[[Monday 8.00-&gt;8.00]]
 </tw-passagedata><tw-passagedata pid="8" name="8.00" tags="" position="3498,2138" size="100,100">&lt;&lt;linkappend &quot;Wait for a while&quot;&gt;&gt;
 	&lt;&lt;if $photographer is true&gt;&gt;
 		&lt;&lt;include &quot;Happening Photographer&quot;&gt;&gt;
