Added Ending Image

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -475,6 +475,8 @@ His face is pale. His eyes blurry, staring into nothingness.
 “Mr. Hook, what...no!”
 “Oh boy….what have you done…”
 
+&lt;img class=&quot;background&quot; src=&quot;http://bsh.zeitsturm.ch/img/london_fire.png&quot;/&gt;
+
 And so, in an alternative timeline than ours right now, you became the cause for the second great London Fire, that caused hundreds of peoples lives, and made many homeless. You’ve overdone it; most sadly. But can anyone really blame you? Hook gave you this explicit order. Oh, Hook is dying. Yeah, right.
 Well, if that’s the case, you’ll be definitely blamed anyway.
 
@@ -1359,7 +1361,7 @@ He walks away and disappears in the next alley.
 
 [[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="80" name="Doge Question" tags="" position="4063,978" size="100,100">&lt;img class=&quot;character&quot; src=&quot;http://bsh.zeitsturm.ch/img/detective.png&quot;/&gt;//&quot;WHAT DID YOU SAY?  How can you be so certain? He is an unpredictable being! Nobody can find a pattern in his behaviour except that he commits crimes everyday… People don’t call him Shamous the Shameless O’Flannigan without reason.&quot;//
 
-[[ Oh you meant //the// SHAMOUS O’Flannigan? I thought you searched for someone else. I’m sorry to boost your hopes for such a short time! I’m sure someone as brilliant as you can find him in no time!!-&gt;Dissmiss]]
+[[ Oh you meant THE SHAMOUS O’Flannigan? I thought you searched for someone else. I’m sorry to boost your hopes for such a short time! I’m sure someone as brilliant as you can find him in no time!!-&gt;Dissmiss]]
 
 [[I’m not gonna tell you more than this: Go to 54 Bernerstreet next monday. He will be there. He always carries a gun and a knife. Be prepared! I have to go now -  my master is awaiting my presence...-&gt;DealDetective]]</tw-passagedata><tw-passagedata pid="81" name="DealDetective" tags="" position="4388,1134" size="100,100">&lt;img class=&quot;character&quot; src=&quot;http://bsh.zeitsturm.ch/img/detective.png&quot;/&gt;//&quot;Hmmmm… I don’t know if I can trust you in this matter. I will think about this thoroughly. If i don’t have any clue until then, I will maybe show up at 54 Berners street.//&quot; And after giving you another stern look, he adds://&quot;Maybe.&quot;//
 &lt;&lt;set $detective to true&gt;&gt;
@@ -1589,7 +1591,7 @@ He stands up, whispers something to the other man and walks towards you.
 Listen, i’ll do it for 17£!&quot;//
 
 &lt;&lt;if $money gte 17&gt;&gt;
-[[[Sounds good! Monday 8 o’clock? The address is 54 Berners Street.-&gt;Deal Chaclographer]]
+[[Sounds good! Monday 8 o’clock? The address is 54 Berners Street.-&gt;Deal Chaclographer]]
 &lt;&lt;/if&gt;&gt;
 
 [[Still too much-&gt;Fail Barter Chalcographer]]</tw-passagedata><tw-passagedata pid="105" name="AngeredChalcographer" tags="" position="1273,1101" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
