--- a/Berners Street .html
+++ b/Berners Street .html
@@ -246,8 +246,7 @@ Config.history.controls = false;
 
 
 &lt;&lt;set $phase_collection to false &gt;&gt;
-&lt;&lt;set $phase_tumult to false &gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Intro" tags="" position="3465,0" size="100,100">
-T’was a mediocrely foggy day; one of many typical London fall mornings. You take the corner towards Hook’s bureau; evade a few people rushing; and look down the street. 
+&lt;&lt;set $phase_tumult to false &gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="Intro" tags="" position="3465,0" size="100,100">T’was a mediocrely foggy day; one of many typical London fall mornings. You take the corner towards Hook’s bureau; evade a few people rushing; and look down the street. 
 The city’s awakening; the ubiquitous noise of people slowly increases together with the sun climbing the sky westwards. A few carriages were rolling on the manky streets already; a couple of maids were transporting bins of laundry, chit-chatting with each other in shrill soprane tones of voice. 
 
 The effect of the coffee you drank half an hour ago is slowly unfolding; and you’re feeling rather well, ready to serve another day as a loyal helping hand for Hook.
