--- a/Berners Street .html
+++ b/Berners Street .html
@@ -187,11 +187,13 @@ margin-bottom:2vh;
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
 
 
 
@@ -259,7 +261,7 @@ As you climb up the two rows of stairs up to the office, you notice agitated tal
 
 
 </tw-passagedata><tw-passagedata pid="3" name="Map" tags="" position="3504,1351" size="200,200">&lt;div id=&quot;redmap&quot;&gt;
-	&lt;div id=&quot;bloxford&quot;&gt;&lt;&lt;link &quot;&quot;&gt;&gt;&lt;&lt;goto &quot;Bloxsford Street&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;
+	&lt;div id=&quot;bloxford&quot;&gt;&lt;&lt;link &quot;&quot;&gt;&gt;&lt;&lt;goto &quot;Bloxford Street&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;
 	&lt;div id=&quot;faker&quot;&gt;&lt;&lt;link &quot;&quot;&gt;&gt;&lt;&lt;goto &quot;Faker Street&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;
 	&lt;div id=&quot;reek&quot;&gt;&lt;&lt;link &quot;&quot;&gt;&gt;&lt;&lt;goto &quot;Reek Street&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;
 &lt;/div&gt;
